Fix label overlapping for input with buttons (#289)

--- a/src/scss/custom/_form-password.scss
+++ b/src/scss/custom/_form-password.scss
@@ -1,9 +1,11 @@
 .password-icon {
   cursor: pointer;
   position: absolute;
-  right: $v-gap * 2;
+  right: 0;
   top: $v-gap;
   z-index: 10;
+  padding: 0 $spacer/2;
+  background-color: $white;
   .icon {
     fill: $gray-secondary;
   }
